# tdd-fastapi-docker

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
project/.github/workflows/: main.yml
project/app/: main.py
project/app/api/: summaries.py
project/tests/: test_summaries.py
