[tool.poetry]
name = "docker-ml"
version = "0.1.0"
description = ""
authors = ["Sharad Shriyan <sharad30.ss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
asyncpg = "^0.26.0"
tortoise-orm = "^0.19.2"
aerich = "^0.6.3"
pytest = "^7.1.2"
gunicorn = "^20.1.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.0"


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
